# NE-CRC

./: .gitignore  COMPLETION_SUMMARY.md  DATA_LOADING_FIX.md  EXPERIMENTS.md  GETTING_STARTED.md  HUONG_DAN_CO_BAN.md  IMPLEMENTATION_STATUS.md  INTEGRATION_SUMMARY.md  README.md  VLLM_FIX.md  pyproject.toml  requirements.txt
experiments/config_templates/: pilot.yaml  strong_shift.yaml
outputs/pilot_id_unknown/: metrics.json
outputs/pilot_id_unknown/tables/: results_summary.md  table_ablation.tex  table_coverage_at_risk.tex  table_main_results.tex
scripts/: aggregate_results.py  generate_figures.py  generate_tables.py  run_experiment.py  run_full_benchmark.sh  run_pilot.sh  run_pilot_conda.sh  run_pilot_uv.sh  test_data_loading.py
src/baselines/: __init__.py  heuristic.py  trivial.py  unicr.py
src/calibration/: __init__.py  logistic_head.py  mlp_head.py
src/conformal/: __init__.py  ne_crc.py  standard_crc.py
src/conformal/weights/: __init__.py  density_ratio_weights.py  (+2 more)
src/data/: __init__.py  abstention_bench.py  correctness_evaluator.py  data_types.py  shift_splits.py
src/filtering/: __init__.py  sconfu_filter.py
src/metrics/: __init__.py  cost_metrics.py  coverage_risk.py  metrics_computer.py  rc_curve.py  risk_violation.py
src/models/: __init__.py  evidence_extractor.py  llm_wrapper.py
src/ne_crc/: __init__.py
src/pipeline/: __init__.py  caching.py  experiment.py
src/uncertainty/: __init__.py  dispersion.py  semantic_entropy.py  token_entropy.py  uncertainty_estimator.py
src/variants/: __init__.py  s_unicr.py  unicr_filter.py  unicr_necrc.py
