[project]
name = "ne-crc"
version = "0.1.0"
description = "Shift-Aware Universal Confidence via Non-Exchangeable Conformal Risk Control"
readme = "README.md"
authors = [
    { name = "Duong Xuan Bach", email = "bachduong7103@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.36.0",
    "vllm>=0.3.0",
    "datasets>=2.14.0",
    "huggingface-hub>=0.19.0",
    "evaluate>=0.4.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "plotly>=5.17.0",
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    "tqdm>=4.66.0",
    "loguru>=0.7.0",
    "sentence-transformers>=2.2.0",
    "accelerate>=0.24.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
]

[project.scripts]
ne-crc = "ne_crc.cli:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
